@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.4</version>
+		<version>3.0.2</version>
 		<relativePath /> <!--lookupparentfromrepository-->
 	</parent>
 	<groupId>com.jojo.helidon.api</groupId>
@@ -14,23 +14,22 @@
 	<description>Demo project for Javalin</description>
 	<properties>
 		<java.version>19</java.version>
-		<avaje.inject.version>8.9</avaje.inject.version>
-		<slf4j.version>2.0.2</slf4j.version>
-		<logback.version>1.4.1</logback.version>
+		<avaje.inject.version>8.12-RC3</avaje.inject.version>
+		<avaje.jsonb.version>1.2-RC2</avaje.jsonb.version>
+		<avaje.http.version>1.24</avaje.http.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
 				<groupId>io.helidon</groupId>
 				<artifactId>helidon-bom</artifactId>
-				<version>4.0.0-ALPHA2</version>
+				<version>4.0.0-ALPHA3</version>
 				<scope>import</scope>
 				<type>pom</type>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<dependencies>
-
 		<dependency>
 			<groupId>io.helidon.nima.webserver</groupId>
 			<artifactId>helidon-nima-webserver</artifactId>
@@ -40,13 +39,10 @@
 			<artifactId>avaje-jsonb</artifactId>
 			<version>1.0-RC2</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
-
-
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -63,23 +59,33 @@
 		</dependency>
 		<dependency>
 			<groupId>io.avaje</groupId>
+			<artifactId>avaje-jsonb</artifactId>
+			<version>${avaje.jsonb.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.avaje</groupId>
 			<artifactId>avaje-inject</artifactId>
 			<version>${avaje.inject.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.avaje</groupId>
 			<artifactId>avaje-config</artifactId>
-			<version>2.3</version>
+			<version>2.4</version>
 		</dependency>
 		<dependency>
 			<groupId>io.avaje</groupId>
 			<artifactId>avaje-http-api</artifactId>
-			<version>1.18</version>
+			<version>${avaje.http.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.avaje</groupId>
 			<artifactId>avaje-http-client</artifactId>
-			<version>1.19</version>
+			<version>${avaje.http.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.avaje</groupId>
+			<artifactId>avaje-http-hibernate-validator</artifactId>
+			<version>3.1-RC1</version>
 		</dependency>
 		<dependency>
 			<groupId>io.avaje</groupId>
@@ -93,8 +99,7 @@
 			<version>2.28.0</version>
 			<scope>test</scope>
 		</dependency>
-
-
+		<!-- Test Annotation processors -->
 		<dependency>
 			<groupId>io.avaje</groupId>
 			<artifactId>avaje-inject-generator</artifactId>
@@ -103,14 +108,20 @@
 		</dependency>
 		<dependency>
 			<groupId>io.avaje</groupId>
+			<artifactId>avaje-jsonb-generator</artifactId>
+			<version>${avaje.jsonb.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.avaje</groupId>
 			<artifactId>avaje-http-nima-generator</artifactId>
-			<version>1.18</version>
+			<version>${avaje.http.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>io.avaje</groupId>
 			<artifactId>avaje-http-client-generator</artifactId>
-			<version>1.17</version>
+			<version>${avaje.http.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -164,6 +175,7 @@
 				<configuration>
 					<compilerArgs>
 						<arg>--enable-preview</arg>
+						<arg>--add-modules=jdk.incubator.concurrent</arg>
 						<arg>-XDcompilePolicy=simple</arg>
 						<arg>-Xplugin:ErrorProne</arg>
 					</compilerArgs>
@@ -181,22 +193,17 @@
 						<path>
 							<groupId>io.avaje</groupId>
 							<artifactId>avaje-http-nima-generator</artifactId>
-							<version>1.18</version>
+							<version>${avaje.http.version}</version>
 						</path>
 						<path>
 							<groupId>io.avaje</groupId>
 							<artifactId>avaje-http-client-generator</artifactId>
-							<version>1.17</version>
+							<version>${avaje.http.version}</version>
 						</path>
 						<path>
 							<groupId>io.avaje</groupId>
 							<artifactId>avaje-jsonb-generator</artifactId>
-							<version>1.0-RC2</version>
-						</path>
-						<path>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-							<version>1.18.24</version>
+							<version>${avaje.jsonb.version}</version>
 						</path>
 					</annotationProcessorPaths>
 				</configuration>
